 
syntax = "proto3";
 
message QueryPQLRequest {
  string index = 1;
  string pql = 2;
}


message RowResponse{
  repeated ColumnInfo column_info = 1;
  repeated ColumnResponse columns = 2;
  string errorMessage=3;
}

message ColumnInfo {
  string name = 1;
  string datatype = 2;
}

message ColumnResponse{
  oneof columnVal {
    string stringVal = 1;
    int64 intVal = 2;
    bool boolVal = 3;
    bytes blobVal = 4;
  }
}

message InspectRequest {
  string index = 1;
  IdsOrKeys columns = 2;
  repeated string filterFields =3;
}

message Ids {
  repeated uint64 vals = 1;
}

message Keys {
  repeated string vals = 1;
}

message IdsOrKeys {
  oneof type {
    Ids ids = 1;
    Keys keys = 2;
  }
}

message InspectResponse {
  repeated FieldSet fields = 1;
}

message FieldSet {
  string fieldName = 1;
  IdsOrKeys items = 2;
}

service Pilosa {
  rpc QueryPQL(QueryPQLRequest) returns (stream RowResponse) {};
  rpc Inspect(InspectRequest) returns (stream InspectResponse) {};
}
